# TestCaptureDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/coolcsf/testcapturedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/coolcsf/testcapturedemo/: AVCEncoder.java  AVCEncoder1.kt  CameraHelper.kt  MApplication.kt  MainActivity.kt  VideoCaptureDevice.kt  VideoCaptureFactory.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/coolcsf/testcapturedemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
yuvutils/: CMakeLists.txt  build.gradle
yuvutils/src/androidTest/java/com/csf/yuvutil/: ExampleInstrumentedTest.kt
yuvutils/src/main/: AndroidManifest.xml
yuvutils/src/main/java/com/csf/yuvutil/: YuvUtil.kt
yuvutils/src/test/java/com/csf/yuvutil/: ExampleUnitTest.kt
